--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,11 @@
     <color name="white">#FFFFFFFF</color>
     <color name="toolbar_background_color">#FFFFFFFF</color>
     <color name="toolbar_title_color">#FF6200EE</color>
+    <color name="present_dot_color">#3FED15</color>
+    <color name="ordered_dot_color">#EDB715</color>
+    <color name="absent_dot_color">#E31414</color>
+    <color name="unknown_dot_color">#FF302E2E</color>
+    <color name="card_default_text_color">#FF000000</color>
+    <color name="card_status_text_color">#FF302E2E</color>
+    <color name="bottom_sheet_content_label_color">#FF000000</color>
 </resources>
